Update header design

--- a/src/app/components/shell/header/header.hbs
+++ b/src/app/components/shell/header/header.hbs
@@ -4,31 +4,37 @@
         <a href="#maincontent">skip to main content</a>
     </div>
 
+    <nav class="secondary-nav">
+        <ul class="nav-menu">
+            <li class="nav-menu-item"><a href="/news">News</a></li>
+            <li class="nav-menu-item"><a href="/contact">Contact</a></li>
+            <li class="nav-menu-item"><a href="/about">About</a></li>
+            <li class="nav-menu-item"><a href="/give">Give</a></li>
+            <li class="nav-menu-item"><a href="/login">Login</a></li>
+            <li class="nav-menu-item">
+                <a href="http://www.rice.edu">
+                    <img src="/images/rice.png" alt="Rice University logo" height="30" />
+                </a>
+            </li>
+        </ul>
+    </nav>
+
     <nav class="nav">
-        <span class="flex-1-0 logo-wrapper">
+        <span class="logo-wrapper">
             <a href="/" aria-label="Home Page">
                 <span class="logo os-logo">
-                    <img src="/images/logo.png" alt="OpenStax logo" height="40" />
+                    <img src="/images/logo-white.svg" alt="OpenStax logo" height="40" />
                 </span>
             </a>
+
+            <span class="logo-quote">Access. The future of education.</span>
         </span>
 
-        <span class="flex-1-0 hidden-desktop">
-            <button class="expand-nav">&#9776;</button>
-        </span>
-
-        <ul class="nav-menu flex-3-0">
+        <ul class="nav-menu">
             <li class="nav-menu-item"><a href="/subjects">Subjects</a></li>
-            <li class="nav-menu-item"><a href="/tools">Tools</a></li>
-            <li class="nav-menu-item"><a href="/k-12">K-12</a></li>
             <li class="nav-menu-item"><a href="/higher-ed">Higher Education</a></li>
+            <li class="nav-menu-item"><a href="/k-12">K-12</a></li>
             <li class="nav-menu-item"><a href="/research">Research</a></li>
         </ul>
-
-        <span class="flex-1-0 logo-wrapper visible-desktop">
-            <a class="logo rice-logo" href="/" aria-label="Rice University">
-                <img src="/images/rice.png" alt="Rice University logo" width="74" height="32" />
-            </a>
-        </span>
     </nav>
 </header>
