--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -17,7 +17,13 @@ body {
     min-height: 100vh;
 
     #main {
+        display: flex;
         flex: 1 1 auto;
+
+        > div {
+            display: flex;
+            width: 100vw;
+        }
     }
 }
 
