--- a/src/app/components/shell/header/header.hbs
+++ b/src/app/components/shell/header/header.hbs
@@ -21,11 +21,12 @@
 
     <nav class="nav">
         <span class="logo-wrapper">
-            <a href="/" aria-label="Home Page">
-                <span class="logo os-logo">
-                    <img src="/images/logo-white.svg" alt="OpenStax logo" height="40" />
-                </span>
-            </a>
+            <span class="logo os-logo">
+                <a href="/" aria-label="Home Page">
+                    <img class="logo-color" src="/images/logo.svg" alt="OpenStax logo" height="40" />
+                    <img class="logo-white" src="/images/logo-white.svg" alt="OpenStax logo" height="40" />
+                </a>
+            </span>
 
             <span class="logo-quote">Access. The future of education.</span>
         </span>
