--- a/src/app/pages/home/home.hbs
+++ b/src/app/pages/home/home.hbs
@@ -1,12 +1,41 @@
-<style scoped>@import url(/app/pages/home/home.css);</style>
+<style scoped>
+    @import url(https://fonts.googleapis.com/css?family=Permanent+Marker);
+    @import url(/app/pages/home/home.css);
+</style>
 <div class="home-page">
-    <main id="maincontent">
-        <os-carousel></os-carousel>
+    <div class="book-banner us-history">
+        <div class="john-adams"></div>
+        <div class="sacajawea"></div>
+        <div class="clermont"></div>
+        <div class="book"></div>
+        <div class="video-banner"></div>
+        <div class="square-1"></div>
+        <div class="square-2"></div>
+        <div class="square-3"></div>
+        <div class="square-4"></div>
 
-        <h1>What We Do</h1>
-        <p> Free, peer-reviewed textbooks. Digital learning tools. Open education resources.
-            OpenStax is working for greater access to education. We make it easy to adopt high-quality,
-            affordable learning materials for your students.
-        </p>
+        <div class="btn btn-large now-i-can">
+            <span>Now I can</span>
+            <span class="quote">Travel back in time</span>
+        </div>
+
+        <div class="subject-links">
+            <ul>
+                <li>
+                    <a class="btn btn-large btn-secondary explore-subject" href="/books/us-history">
+                        Explore U.S. History
+                    </a>
+                </li>
+                <li>
+                    <a class="btn btn-large btn-primary explore-all" href="/subjects">
+                        Explore All Subjects
+                    </a>
+                </li>
+            </ul>
+        </div>
+    </div>
+
+    <main id="maincontent">
+
     </main>
 </div>
