Update footer design

--- a/src/styles/components/buttons.scss
+++ b/src/styles/components/buttons.scss
@@ -2,8 +2,8 @@
 @import 'mixins';
 
 .btn {
-    background-color: color(neutral-lightest);
-    color: color(neutral-darkest);
+    background-color: color(neutral-medium);
+    color: color(neutral-light);
     cursor: pointer;
     display: inline-block;
     font-weight: 500;
