--- a/src/styles/variables/colors.scss
+++ b/src/styles/variables/colors.scss
@@ -24,7 +24,8 @@ $neutral-colors: (
     darkest: black,
     dark: rgb(51, 51, 51),
     medium: os-color(gray),
-    light: rgb(220, 220, 220),
+    light: rgb(154, 154, 155),
+    lighter: rgb(220, 220, 220),
     lightest: white
 );
 
