Update footer design

--- a/src/app/components/shell/footer/footer.scss
+++ b/src/app/components/shell/footer/footer.scss
@@ -2,122 +2,71 @@
 @import 'mixins';
 
 .footer {
-    align-items: stretch;
+    align-items: center;
     background-color: color(neutral-dark);
     color: color(neutral-light);
     display: flex;
-    font-size: 1.2rem;
-    font-weight: 400;
-    justify-content: space-around;
-    padding: 2rem;
+    flex-wrap: wrap;
+    padding: 5.8vw 7vw 7.25vw;
+
+    ul {
+        display: flex;
+        list-style-type: none;
+        margin: 0;
+        padding: 0;
+
+        li {
+            flex: 0 0 auto;
+        }
+    }
 
     a {
         color: color(neutral-light);
 
         &:active,
-        &:hover,
-        &:focus {
+        &:focus,
+        &:hover {
             text-decoration: underline;
-        };
-    }
-
-    ul {
-        list-style-type: none;
-        margin: 0;
-        padding: 0;
-    }
-
-    .copyright,
-    .connect,
-    .share {
-        padding: 0 1.5rem;
-    }
-
-    .copyright,
-    .connect {
-        border-right: 0.1rem solid color(neutral-medium);
-
-        @include phone {
-            border-right: 0;
         }
     }
 
-    .connect,
-    .share {
-        flex: 1 0 16.5%;
+    .hero-quote {
+        flex: 1 0 100%;
+        font-size: 5.4vw;
+        font-weight: bold;
+        padding-bottom: 4.8vw;
         text-align: center;
-
-        @include phone {
-            display: none;
-        }
-
-        .small-header {
-            display: block;
-            margin-bottom: 1rem;
-            margin-top: 1.5rem;
-        }
-
-        li {
-            line-height: 2rem;
-        }
-    }
-
-    .share {
-        ul {
-            align-items: center;
-            display: flex;
-            flex-wrap: wrap;
-        }
-
-        li {
-            flex: 0 1 50%;
-            padding-left: 0.5rem;
-            text-align: left;
-        }
-
-        // Top Two
-        li:nth-child(-n+2) {
-            padding-bottom: 1rem;
-        }
-
-        // Left Two
-        li:nth-child(odd) {
-            padding-left: 0;
-            padding-right: 0.5rem;
-            text-align: right;
-        }
     }
 
     .copyright {
-        display: flex;
-        flex: 2 1 67%;
-        flex-direction: column;
-        line-height: 1.7rem;
+        border-right: 0.1rem solid color(neutral-medium);
+        flex: 3 0 60%;
+        padding-right: 4.5vw;
 
-        li {
-            border-right: 0.1rem solid color(neutral-medium);
-            display: inline-block;
-            padding-left: 0.3rem;
-            padding-right: 0.7rem;
-
-            &:first-child {
-                padding-left: 0;
-            };
-
-            &:last-child {
-                border: 0;
-                padding-right: 0;
-            };
+        ul a {
+            margin-right: 1vw;
         }
 
-        > nav,
         > div {
-            padding: 0.8rem 0;
+            line-height: 2rem;
+            padding-top: 2rem;
+        }
+    }
+
+    .social {
+        flex: 2 0 40%;
+        padding-left: 4.5vw;
+
+        a {
+            height: 7rem;
+            margin: 1.5rem;
+            width: 7rem;
         }
 
-        .cc-logo-link {
-            float: left;
-            margin-right: 1.5rem;
+        ul {
+            display: flex;
+            flex-wrap: wrap;
+            justify-content: center;
         }
     }
 }
