--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -46,6 +46,11 @@ a {
     width: 0.1rem;
 }
 
+.text-content {
+    max-width: 1200px;
+    margin: 0 auto;
+}
+
 #main {
     animation: fadeIn ease-in 1;
     animation-delay: 0.2s;
