--- a/src/styles/components/headers.scss
+++ b/src/styles/components/headers.scss
@@ -14,19 +14,22 @@ h6 {
 h1,
 .extra-large-header {
     font-size: 3.5rem;
-    font-weight: normal;
+    font-weight: 400;
+    margin-bottom: 2.5rem;
 }
 
 h2,
 .large-header {
     font-size: 2.8rem;
     font-weight: 300;
+    margin-bottom: 1.8rem;
 }
 
 h3,
 .medium-header {
     font-size: 2.1rem;
-    font-weight: 300;
+    font-weight: 400;
+    margin-bottom: 1.1rem;
 }
 
 h4,
