Add Adoption Form page

--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -36,6 +36,11 @@ a {
     text-decoration: none;
 }
 
+.text-content {
+    margin: 0 auto;
+    max-width: 120rem;
+}
+
 .sr-only {
     border: 0;
     clip: rect(0, 0, 0, 0);
