Create adoption confirmation form
Layout table of savings and donation slider
Add behavior and basic styling

--- a/src/app/pages/details/details.hbs
+++ b/src/app/pages/details/details.hbs
@@ -14,8 +14,8 @@
                 Using this book, or interested in adopting it for your
                 course?
             </p>
-            <a href="/adoptions?{{title}}" class="btn">Adopt This Book</a>
-            <a class="secondary btn">get interested</a>
+            <a href="/adoption?{{title}}" class="btn">Adopt This Book</a>
+            <a href="/interest?{{title}}" class="secondary btn">get interested</a>
         </div>
     </section>
     <div class="text-content">
